--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,6 +6,7 @@
             <th>Title</th>
             <th>Description</th>
             <th colspan="3">Actions</th>
+            <th> Created by </th>
         </tr>
     <thead>
      <tbody>
@@ -16,7 +17,9 @@
                 <td><%= link_to 'Show', article_path(article.id) %></td>
                 <td><%= link_to 'Edit', edit_article_path(article.id) %></td>
                 <td><%= link_to 'Delete', article_path(article.id), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure?" } %></td>  <%# turbo method data needed%>
-            </tr>      <%# if you want to use method: :delete then alternative is to use button_to instead of link_to %>
+                <%# if you want to use the method: :delete command then alternative is to use button_to instead of link_to %>
+                <td style="text-align:center"><%= article.user.username %>
+            </tr>      
         <% end %>
     </tbody>
 
