--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,13 @@
 
 <h1> Welcome to the Home Page </h1>
 
-<%= link_to 'Go to Articles Listings', articles_path %>  |
+<%# link_to 'Go to Articles Listings', articles_path %>  
+
+<%= button_to "Sign Up", signup_path  %>
+
+
+<br/>
+<br/>
+<br/>
 
 <%= link_to 'About Page', about_path %> 
