--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <% if @user.errors.any? %>
-    <h2>The following errors prevented the article from being saved</h2>
+    <h2>The following errors prevented the User from being created</h2>
     <ul>
         <% @user.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
@@ -25,7 +25,7 @@
 </p>
 
 <p>
-    <%= f.submit %>
+    <%= f.submit "Sign Up" %>
 </p>
 
 <% end %>
