cleanup code part 1

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,9 @@
 
 <%= gravatar_for @user, size: 100 %>
 
+<br />
+
+<%= link_to "Edit your profile", edit_user_path(@user) %>
 
 <h3>Articles</h3>
 
