added pagination functionality

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Listing all Alpha Bloggers</h1>
 
+<%= will_paginate @users %>
 
 <table>
     <thead>
@@ -24,3 +25,6 @@
 
 
 </table>
+
+
+<%= will_paginate @users %>
