--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,11 @@
 
 <%= link_to "Edit your profile", edit_user_path(@user) %>
 
+<%= will_paginate @articles %>
+
 <h3>Articles</h3>
 
 <%= render 'articles/article' %>
+
+
+<%= will_paginate @articles %>
