--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,16 @@
 
 
-<h1> Welcome to the Home Page </h1>
+<h1> Welcome to the Alpha Blog home page</h1>
 
 <%# link_to 'Go to Articles Listings', articles_path %>  
+<table>
+    <tr>
+        <td><%= link_to "Sign Up", signup_path  %></td>
+        <td><%= link_to "Log in", login_path  %></td>
+    </tr>
+</table>
 
-<%= button_to "Sign Up", signup_path  %>
+
 
 
 <br/>
