--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,11 @@
 <p><strong>Title: </strong><%= @article.title %></p>
 <p><strong>Description: </strong><%= @article.description %></p>
 
+<% if logged_in? && @article.user == current_user %>
+
 <%= link_to 'Edit', edit_article_path(@article) %> | 
-<%= link_to 'Delete', article_path(@article), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure",  } %> |
-<%= link_to 'Return to articles listing', articles_path %> | 
+<%= link_to 'Delete', article_path(@article), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure",  } %> 
+
+<% end %>
+
+<%= link_to 'Return to articles listing', articles_path %> 
