--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,9 @@
         <tr>
             <th>Title</th>
             <th>Description</th>
+            <th> User name </th>
             <th colspan="2">Actions</th>
-            <th> Created by </th>
+            
         </tr>
     <thead>
      <tbody>
@@ -16,9 +17,12 @@
             <tr>
                 <td><%= link_to gravatar_for(user), user_path(user) %></td>
                 <td><%= pluralize(user.articles.count, "article") %></td>
-                <td><%= link_to 'View', user_path(user) %></td>
-                <td><%= link_to 'Edit Profile', edit_user_path(user) %></td>
                 <td style="text-align:center"><%= link_to user.username, user_path(user) %></td>
+                <td><%= link_to 'View', user_path(user) %></td>
+                <% if logged_in? && user == current_user %>
+                    <td><%= link_to 'Edit Profile', edit_user_path(user) %></td>
+                <% end %>
+                
             </tr>      
         <% end %>
     </tbody>
