--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,7 +13,7 @@
                 <td><%= article.title %></td>
                 <td><%= article.description %></td>
                 <td><%= link_to 'Show', article_path(article.id) %></td>
-                <% if logged_in? && article.user == current_user %>
+                <% if logged_in? && (article.user == current_user || current_user.admin?) %>
                     <td><%= link_to 'Edit', edit_article_path(article.id) %></td>
                     <td><%= link_to 'Delete', article_path(article.id), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure?" } %></td>  <%# turbo method data needed%>
                     <%# if you want to use the method: :delete command then alternative is to use button_to instead of link_to %>
