--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
 <p><strong>Title: </strong><%= @article.title %></p>
 <p><strong>Description: </strong><%= @article.description %></p>
 
-<% if logged_in? && @article.user == current_user %>
+<% if logged_in? && (@article.user == current_user || current_user.admin?) %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> | 
 <%= link_to 'Delete', article_path(@article), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure",  } %> 
