--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,19 @@
 <h1>Category: <%= @category.name %> </h1>
+
+<% if logged_in? && current_user.admin? %>
+
+<%= link_to "Edit category name", edit_category_path(@category) %>
+
+<% end %>
+
+<%= will_paginate @articles %>
+
+<h3>Articles</h3>
+
+<%= render 'articles/article' %>
+
+
+<%= will_paginate @articles %>
+
+
+<%= link_to "Home Page", root_path %>
